--- a/Web/index.html
+++ b/Web/index.html
@@ -6,12 +6,12 @@
     <title>Pets Control | Inicio</title>
     <!-- <meta name="description" content=""> -->
     <!-- <meta name="keywords" content=""> -->
-    <meta name="author" content="Grupo 04 - Titulación Software 2021">
+    <meta name="author" content="Grupo 01 - Titulación Software 2021">
     <meta name="copyright" content="PET ID">
     <meta name="robots" content="index">
-    <!-- <link rel="icon" type="image/png" href=""> -->
+    <link rel="icon" type="image/png" href="./assets/img/favicon.png">
 </head>
 <body>
-
+    <!-- Code Here -->
 </body>
 </html>
