Página de consulta sin botón de whatsapp

--- a/Web/plataforma/index.html
+++ b/Web/plataforma/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>aqui va la página del usuario</h1>
+    <!-- pagina de la plataforma con boton de cerrar sesion -->
 </body>
 </html>
