Páginas de registro y acceso OK

--- a/Web/consultas/index.html
+++ b/Web/consultas/index.html
@@ -63,6 +63,7 @@
       <p class="paragraph">
         Consulta todas las dudas que tengas con nuestro reconocido grupo de médicos veterinarios, envíanos un mensaje y nuestros profesionales te ayudarán a tomar la mejor decisión para el engreído de la casa.
       </p>
+      <!-- Botón de WhatsApp -->
     </div>
   </div>
 </body>
