--- a/Web/acceso/index.html
+++ b/Web/acceso/index.html
@@ -17,6 +17,9 @@
 <body>
     <div class="contenedor">
         <div class="login">
+            <div class="back">
+                <a href="./.." rel="nofollow" target="_self"><</a>
+            </div>
             <form class="formulario">
                 <span class="titulo">Acceder con</span>
                 <button type="button" class="btnFB" id="btnFB">
