Retoques a lás páginas de acceso y registro

--- a/Web/registro/index.html
+++ b/Web/registro/index.html
@@ -26,7 +26,7 @@
                     <i class="devicon-facebook-plain"></i>Facebook
                 </button>
                 <button type="button" class="btnGG" id="btnGG">
-                    <img src="../assets/img/logoGG.png" alt="GOOGLE">Google
+                    <img src="../assets/img/icons/logoGG.png" alt="GOOGLE">Google
                 </button>
                 <div class="usuario"><span>Correo</span></div>
                 <div class="input-contenedor">
