--- a/Web/acceso/index.html
+++ b/Web/acceso/index.html
@@ -26,7 +26,7 @@
                     <i class="devicon-facebook-plain"></i>Facebook
                 </button>
                 <button type="button" class="btnGG" id="btnGG">
-                    <img src="../assets/img/logoGG.png" alt="GOOGLE">Google
+                    <img src="../assets/img/icons/logoGG.png" alt="GOOGLE">Google
                 </button>
                 <div class="usuario"><span>Correo</span></div>
                 <div class="input-contenedor">
@@ -34,7 +34,7 @@
                 </div>
                 <div class="contrasenia">
                     <span>Contraseña</span>
-                    <a class="linkContraO" id="linkContraO" rel="nofollow" target="_self">olvidada?</a>
+                    <a class="linkContraO" id="linkContraO" rel="nofollow" target="_self">¿olvidaste tu contraseña?</a>
                 </div>
                 <div class="input-contenedor">
                     <input class="txtContrasenia" type="password" id="txtContrasenia">
