Página de consultas OK

--- a/Web/consultas/index.html
+++ b/Web/consultas/index.html
@@ -59,11 +59,21 @@
       </div>
     </div>
     <div class="part-right">
+      <figure>
+        <img src="../assets/img/logos/logo.png" alt="logo">
+      </figure>
       <h2 class="title">Consulta con un profesional</h2>
       <p class="paragraph">
         Consulta todas las dudas que tengas con nuestro reconocido grupo de médicos veterinarios, envíanos un mensaje y nuestros profesionales te ayudarán a tomar la mejor decisión para el engreído de la casa.
       </p>
-      <!-- Botón de WhatsApp -->
+      <div class="links">
+        <a href="https://play.google.com/store/apps/developer?id=LAGA" rel="nofollow" target="_self" class="ps">
+          <img src="../assets/img/icons/playstore.svg" alt="Play Store">Descargar App
+        </a>
+        <a href="https://wa.me/51944946824" rel="nofollow" target="_self" class="wa">
+          <img src="../assets/img/icons/whatsapp.svg" alt="WhatsApp">Usar WhatsApp
+        </a>
+      </div>
     </div>
   </div>
 </body>
