--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -14,13 +14,13 @@
 	<div class="wrapper">
 		<nav id="sidebar" class="sidebar">
 			<div class="sidebar-content js-simplebar">
-				<a class="sidebar-brand">
+				<a class="sidebar-brand" id="pnlAdministrativo1">
 					<span class="align-middle">Panel Administrativo</span>
 				</a>
 				<ul class="sidebar-nav">
 					<li class="sidebar-header">Usuario</li>
 					<li class="sidebar-item">
-						<a class="sidebar-link">
+						<a class="sidebar-link" id="">
 							<i class="align-middle" data-feather="user"></i>
 							<span class="align-middle">Perfil</span>
 						</a>
@@ -103,11 +103,6 @@
 				</ul>
 			</div>
 		</nav>
-
-
-<!-- --------------------------------------------------------------------------------- -->
-<!-- --------------------------------------------------------------------------------- -->
-<!-- --------------------------------------------------------------------------------- -->
 		<div class="main">
 			<nav class="navbar navbar-expand navbar-light navbar-bg">
 				<a class="sidebar-toggle d-flex">
@@ -116,29 +111,22 @@
 				<div class="navbar-collapse collapse">
 					<ul class="navbar-nav navbar-align">
 						<li class="nav-item dropdown">
-							<a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-toggle="dropdown">
+							<a class="nav-icon dropdown-toggle d-inline-block d-sm-none" data-toggle="dropdown">
 								<i class="align-middle" data-feather="settings"></i>
 							</a>
-							<a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-toggle="dropdown">
-								<img src="./avatar.png" class="avatar img-fluid rounded mr-1" alt="Charles Hall">
-								<span class="text-dark">Luis Gutierrez</span>
+							<a class="nav-link dropdown-toggle d-none d-sm-inline-block" data-toggle="dropdown">
+								<img src="./avatar.png" class="avatar img-fluid rounded mr-1" alt="Avatar de usuario">
+								<span class="text-dark">Nombre Completo del Usuario</span>
 							</a>
 							<div class="dropdown-menu dropdown-menu-right">
-								<a class="dropdown-item" href="pages-profile.html">
+								<a class="dropdown-item">
 									<i class="align-middle mr-1" data-feather="user"></i> Perfil
 								</a>
-								<a class="dropdown-item" href="#">
-									<i class="align-middle mr-1" data-feather="pie-chart"></i> Analytics
-								</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="pages-settings.html">
+								<a class="dropdown-item">
 									<i class="align-middle mr-1" data-feather="settings"></i> Configuración
 								</a>
-								<a class="dropdown-item" href="#">
-									<i class="align-middle mr-1" data-feather="help-circle"></i> Ayuda
-								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Salir</a>
+								<a class="dropdown-item">Salir</a>
 							</div>
 						</li>
 					</ul>
@@ -162,7 +150,6 @@
 								<li class="list-inline-item">
 									<a class="text-muted" href="tel:51977513393">Soporte y Ayuda</a>
 								</li>
-								<li class="list-inline-item">-</li>
 								<li class="list-inline-item">
 									<a class="text-muted" href="#">Manual de uso</a>
 								</li>
