punto de referencia OK

--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -14,13 +14,13 @@
 	<div class="wrapper">
 		<nav id="sidebar" class="sidebar">
 			<div class="sidebar-content js-simplebar">
-				<a class="sidebar-brand" id="pnlAdministrativo1">
+				<a class="sidebar-brand">
 					<span class="align-middle">Panel Administrativo</span>
 				</a>
 				<ul class="sidebar-nav">
 					<li class="sidebar-header">Usuario</li>
 					<li class="sidebar-item">
-						<a class="sidebar-link" id="">
+						<a class="sidebar-link">
 							<i class="align-middle" data-feather="user"></i>
 							<span class="align-middle">Perfil</span>
 						</a>
@@ -160,6 +160,7 @@
 			</footer>
 		</div>
 	</div>
+	<script src="./util.js"></script>
 	<script src="./main.js"></script>
 </body>
 </html>
