Página principal avanzada

--- a/Web/index.html
+++ b/Web/index.html
@@ -198,13 +198,8 @@
         </div>
     </div>
     <!-- Consultation area end -->
-</body>
-</html>
 
-<!--  -->
-
-<body>
-    <!-- adapt_area_start  -->
+    <!-- Adoption area start -->
     <div class="adapt_area">
         <div class="container">
             <div class="row justify-content-between align-items-center">
@@ -212,9 +207,11 @@
                     <div class="adapt_help">
                         <div class="section_title">
                             <h3><span>Ayúdanos a </span>ayudar</h3>
-                            <p>Tú puedes ser hoy el dueño que una mascota necesita y así ofrecerle una vida más saludable.
-                                Encuentra a tu mascota ideal en nuestro registro de mascotas en adopción.</p>
-                            <a href="contact.html" class="boxed-btn3">Ver mascotas en adopción</a>
+                            <p>
+                                Tú puedes ser hoy el dueño que una mascota necesita y así ofrecerle una vida más saludable.
+                                Encuentra a tu mascota ideal en nuestro registro de mascotas en adopción.
+                            </p>
+                            <a href="#" class="boxed-btn3" rel="nofollow" target="_self">Ver mascotas en adopción</a>
                         </div>
                     </div>
                 </div>
@@ -223,18 +220,18 @@
                         <div class="row align-items-center">
                             <div class="col-lg-6 col-md-6">
                                 <div class="single_adapt text-center">
-                                    <img src="img/adapt_icon/3.png" alt="">
+                                    <img src="./assets/img/icons/adoption-icon-1.png" alt="rostro de cachorro">
                                     <div class="adapt_content">
-                                        <h3 class="counter">100</h3>
+                                        <h3>100</h3>
                                         <p>Mascotas disponibles</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="single_adapt text-center">
-                                    <img src="img/adapt_icon/2.png" alt="">
+                                    <img src="./assets/img/icons/adoption-icon-2.png" alt="huella de cachorro">
                                     <div class="adapt_content">
-                                        <h3><span class="counter">50</span>+</h3>
+                                        <h3>+50</h3>
                                         <p>con nuevo hogar</p>
                                     </div>
                                 </div>
@@ -245,9 +242,9 @@
             </div>
         </div>
     </div>
-    <!-- adapt_area_end  -->
+    <!-- Adoption area end -->
 
-    <!-- testmonial_area_start  -->
+    <!-- Testimonial area start -->
     <div class="testmonial_area">
         <div class="container">
             <div class="row justify-content-center">
@@ -256,54 +253,56 @@
                         <div class="testmonial_wrap">
                             <div class="single_testmonial d-flex align-items-center">
                                 <div class="test_thumb">
-                                    <img src="img/testmonial/1.png" alt="">
+                                    <img src="./assets/img/people/person-1.png" alt="foto de un cliente">
                                 </div>
                                 <div class="test_content">
-                                    <h4>Rose Mery</h4>
+                                    <h4>Katherine</h4>
                                     <span>Dueña de "Perla"</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exerci.</p>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                         <div class="testmonial_wrap">
                             <div class="single_testmonial d-flex align-items-center">
                                 <div class="test_thumb">
-                                    <img src="img/testmonial/1.png" alt="">
+                                    <img src="./assets/img/people/person-2.png" alt="foto de un cliente">
                                 </div>
                                 <div class="test_content">
-                                    <h4>Susan</h4>
-                                    <span>Dueña de "Eucalipto"</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exerci.</p>
+                                    <h4>Juan Luis</h4>
+                                    <span>Dueño de "Maou"</span>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                         <div class="testmonial_wrap">
                             <div class="single_testmonial d-flex align-items-center">
                                 <div class="test_thumb">
-                                    <img src="img/testmonial/1.png" alt="">
+                                    <img src="./assets/img/people/person-3.png" alt="foto de un cliente">
                                 </div>
                                 <div class="test_content">
-                                    <h4>David</h4>
-                                    <span>Dueño de "Ella"</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exerci.</p>
+                                    <h4>Rosse Mery</h4>
+                                    <span>Dueña de "Popeye"</span>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-    <!-- testmonial_area_end  -->
+    <!-- Testimonial area end -->
 
-    <!-- team_area_start  -->
+    <!-- Team area start -->
     <div class="team_area">
         <div class="container">
             <div class="row justify-content-center ">
@@ -318,11 +317,11 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_team">
                         <div class="thumb">
-                            <img src="img/team/1.png" alt="">
+                            <img src="./assets/img/vets/1.png" alt="médico veterinario">
                         </div>
                         <div class="member_name text-center">
                             <div class="mamber_inner">
-                                <h4>Rala Emaia</h4>
+                                <h4>Hilary Maythe</h4>
                                 <p>Especialista en nutrición</p>
                             </div>
                         </div>
@@ -331,11 +330,11 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_team">
                         <div class="thumb">
-                            <img src="img/team/2.png" alt="">
+                            <img src="./assets/img/vets/2.png" alt="médico veterinario">
                         </div>
                         <div class="member_name text-center">
                             <div class="mamber_inner">
-                                <h4>jhon Smith</h4>
+                                <h4>Maycoll Yupanqui</h4>
                                 <p>Especialista en operaciones</p>
                             </div>
                         </div>
@@ -344,11 +343,11 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_team">
                         <div class="thumb">
-                            <img src="img/team/3.png" alt="">
+                            <img src="./assets/img/vets/3.png" alt="médico veterinario">
                         </div>
                         <div class="member_name text-center">
                             <div class="mamber_inner">
-                                <h4>Rala Emaia</h4>
+                                <h4>Liliana Sanchez</h4>
                                 <p>Especialista en epidemiología</p>
                             </div>
                         </div>
@@ -357,8 +356,9 @@
             </div>
         </div>
     </div>
-    <!-- team_area_start  -->
+    <!-- Team area end -->
 
+    <!-- Contact area star -->
     <div class="contact_anipat anipat_bg_1">
         <div class="container">
             <div class="row justify-content-center">
@@ -369,16 +369,17 @@
                             <p>Porque contamos con profesionales altamente capacitados, para brindar la mejor atención las 24 horas del día.</p>
                         </div>
                         <div class="contact_btn d-flex align-items-center justify-content-center">
-                            <a href="contact.html" class="boxed-btn4">Ubícanos</a>
-                            <p>O <a href="#">+51 944 946 824</a></p>
+                            <a href="./ubicanos/" class="boxed-btn4" rel="nofollow" target="_blank">Ubícanos</a>
+                            <p>O <a href="tel:51944946824">+51 944 946 824</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Contact area end -->
 
-    <!-- footer_start  -->
+    <!-- Footer start -->
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
@@ -387,9 +388,9 @@
                         <div class="footer_widget">
                             <h3 class="footer_title">Empresa</h3>
                             <ul class="address_line">
-                                <li><a href="#">+51 944 946 824</a></li>
-                                <li><a href="#">Lima, Jesús María</a></li>
-                                <li><a href="#">PetsControl@gmail.Com</a></li>
+                                <li><a href="tel:51944946824">+51 944 946 824</a></li>
+                                <li><a href="./ubicanos/" rel="nofollow" target="_blank">Lima, Jesús María</a></li>
+                                <li><a href="mailto:petscontrol@gmail.com">PetsControl@gmail.com</a></li>
                             </ul>
                         </div>
                     </div>
@@ -397,9 +398,9 @@
                         <div class="footer_widget">
                             <h3 class="footer_title">Servicios</h3>
                             <ul class="links">
-                                <li><a href="#">Vacunas</a></li>
-                                <li><a href="#">Nutrición </a></li>
-                                <li><a href="#">Operaciones</a></li>
+                                <li><a href="#" rel="nofollow" target="_self">Vacunas</a></li>
+                                <li><a href="#" rel="nofollow" target="_self">Nutrición </a></li>
+                                <li><a href="#" rel="nofollow" target="_self">Operaciones</a></li>
                             </ul>
                         </div>
                     </div>
@@ -407,32 +408,33 @@
                         <div class="footer_widget">
                             <h3 class="footer_title">Enlaces</h3>
                             <ul class="links">
-                                <li><a href="#">Mascotas en adopción</a></li>
-                                <li><a href="#">Registro de mascotas</a></li>
-                                <li><a href="#">Consultas en línea</a></li>
-                                <li><a href="#">Nuestras sedes</a></li>
+                                <li><a href="#" rel="nofollow" target="">Mascotas en adopción</a></li>
+                                <li><a href="#" rel="nofollow" target="">Registro de mascotas</a></li>
+                                <li><a href="./consultas/" rel="nofollow" target="_blank">Consultas en línea</a></li>
+                                <li><a href="./ubicanos/" rel="nofollow" target="_blank">Nuestras sedes</a></li>
+                                <li><a href="#" rel="nofollow" target="">Nuestro equipo</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-6 col-lg-3 ">
                         <div class="footer_widget">
                             <div class="footer_logo">
-                                <a href="#">
-                                    <img src="img/logo.png" alt="">
+                                <a href="./.">
+                                    <img src="./assets/img/logos/logo.png" alt="Logo Pets Control" width="150px">
                                 </a>
                             </div>
                             <p class="address_text">
-                                        <a href="#">Lima, Jesús María Av. Mareátegui 1030</a>
+                                <a href="./ubicanos/" rel="nofollow" target="_blank">Lima, Jesús María Av. Mareátegui 1030</a>
                             </p>
                             <div class="socail_links">
                                 <ul>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.facebook.com/PetsControl-109486034515110/" rel="nofollow" target="_blank">
                                             <i class="fa fa-facebook"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="#" rel="nofollow" target="_blank">
                                             <i class="fa fa-linkedin"></i>
                                         </a>
                                     </li>
@@ -443,15 +445,12 @@
                 </div>
             </div>
         </div>
-        <div class="bordered_1px"></div>
     </footer>
-    <!-- footer_end  -->
+    <!-- Footer end -->
 
-    <!-- JS here -->
-    <script src="js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.slicknav.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./assets/js/jquery-1.12.4.js"></script>
+    <script src="./assets/js/owl-carousel.js"></script>
+    <script src="./assets/js/jquery-slick-nav.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
-
 </html>
