--- a/Web/registro/index.html
+++ b/Web/registro/index.html
@@ -68,7 +68,7 @@
         firebase.initializeApp(firebaseConfig);
     </script>
 
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="../assets/js/accesoYregistro.js"></script>
 </body>
 </html>
