Agregado franja de derechos reservados

--- a/Web/index.html
+++ b/Web/index.html
@@ -445,6 +445,8 @@
                 </div>
             </div>
         </div>
+        <div class="bordered_1px"></div>
+        <p class="text-center ml-4 mr-4">Creado y Editado por PET ID - Todos los derechos reservados - CopyRight 2021</p>
     </footer>
     <!-- Footer end -->
 
