Retoques a algunos archivos

--- a/Web/index.html
+++ b/Web/index.html
@@ -259,8 +259,8 @@
                                     <h4>Katherine</h4>
                                     <span>Dueña de "Perla"</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.
+                                        Unos grandes profesionales, salvaron la vida de Perla. Espero que Dios los bendiga
+                                        y que sigan salvando la vida de los animales que son las almas más puras que existen.
                                     </p>
                                 </div>
                             </div>
@@ -274,8 +274,8 @@
                                     <h4>Juan Luis</h4>
                                     <span>Dueño de "Maou"</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.
+                                        Hola, quería hacer público mi agradecimiento por todo el apoyo recibido en este lugar.
+                                        No saben lo inmensamente agradecido que estoy con ustedes y con sus profesionales.
                                     </p>
                                 </div>
                             </div>
@@ -289,8 +289,8 @@
                                     <h4>Rosse Mery</h4>
                                     <span>Dueña de "Popeye"</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.
+                                        Reconozco el amor, compromiso y vocación que pone todo su personal veterinario.
+                                        Mis más grandes agradecimientos y les deseo muchos éxitos a todos y cada uno de ellos.
                                     </p>
                                 </div>
                             </div>
@@ -435,7 +435,17 @@
                                     </li>
                                     <li>
                                         <a href="#" rel="nofollow" target="_blank">
+                                            <i class="fa fa-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" rel="nofollow" target="_blank">
                                             <i class="fa fa-linkedin"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://wa.me/51944946824" rel="nofollow" target="_blank">
+                                            <i class="fa fa-whatsapp"></i>
                                         </a>
                                     </li>
                                 </ul>
@@ -446,7 +456,7 @@
             </div>
         </div>
         <div class="bordered_1px"></div>
-        <p class="text-center ml-4 mr-4">Creado y Editado por PET ID - Todos los derechos reservados - CopyRight 2021</p>
+        <p class="text-center pl-4 pr-4">Creado y Editado por PET ID - Todos los derechos reservados - CopyRight 2021</p>
     </footer>
     <!-- Footer end -->
 
