menú del cliente avanzado

--- a/Web/index.html
+++ b/Web/index.html
@@ -41,8 +41,22 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-4 ">
-                            <!-- Login Button Here -->
-                            <!-- User Perfil Here -->
+                            <div class="customer_portal">
+                                <ul class="menu1">
+                                    <li>
+                                        <a><img src="./assets/img/icons/usuario-anonimo.png" alt="usuario anónimo"></a>
+                                        <a href="./acceso/" rel="nofollow" target="_self" id="lblUsuario">
+                                            Portal de clientes
+                                        </a>
+                                        <ul class="menu2">
+                                            <li>
+                                                <a id="linkPerfil">Mi perfil</a>
+                                                <a id="btnSalir">Cerrar Sesión</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -464,5 +478,6 @@
     <script src="./assets/js/owl-carousel.js"></script>
     <script src="./assets/js/jquery-slick-nav.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/main2.js"></script>
 </body>
 </html>
