--- a/Web/index.html
+++ b/Web/index.html
@@ -43,12 +43,14 @@
                         <div class="col-lg-6 col-md-4 ">
                             <div class="customer_portal">
                                 <ul class="menu1">
-                                    <li>
-                                        <a><img src="./assets/img/icons/usuario-anonimo.png" alt="usuario anónimo"></a>
-                                        <a href="./acceso/" rel="nofollow" target="_self" id="lblUsuario">
+                                    <li id="contenedorM2">
+                                        <a>
+                                            <img src="./assets/img/icons/usuario-anonimo.png" alt="usuario anónimo" id="userPhoto">
+                                        </a>
+                                        <a href="./acceso/" rel="nofollow" target="_self" id="userName">
                                             Portal de clientes
                                         </a>
-                                        <ul class="menu2">
+                                        <ul class="menu2" id="menu2">
                                             <li>
                                                 <a id="linkPerfil">Mi perfil</a>
                                                 <a id="btnSalir">Cerrar Sesión</a>
@@ -404,7 +406,7 @@
                             <ul class="address_line">
                                 <li><a href="tel:51944946824">+51 944 946 824</a></li>
                                 <li><a href="./ubicanos/" rel="nofollow" target="_blank">Lima, Jesús María</a></li>
-                                <li><a href="mailto:petscontrol@gmail.com">PetsControl@gmail.com</a></li>
+                                <li><a href="mailto:petscontrol2021@gmail.com">PetsControl2021@gmail.com</a></li>
                             </ul>
                         </div>
                     </div>
@@ -448,12 +450,12 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" rel="nofollow" target="_blank">
+                                        <a href="https://www.instagram.com/pets_control21/" rel="nofollow" target="_blank">
                                             <i class="fa fa-instagram"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" rel="nofollow" target="_blank">
+                                        <a href="https://www.linkedin.com/in/pets-control-170372209/" rel="nofollow" target="_blank">
                                             <i class="fa fa-linkedin"></i>
                                         </a>
                                     </li>
@@ -473,6 +475,23 @@
         <p class="text-center pl-4 pr-4">Creado y Editado por PET ID - Todos los derechos reservados - CopyRight 2021</p>
     </footer>
     <!-- Footer end -->
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-firestore.js"></script>
+    
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyAjuPOXu1P52gm-ggd_EJZnfpDwDY9EnOU",
+            authDomain: "pets-control-d5e55.firebaseapp.com",
+            databaseURL: "https://pets-control-d5e55.firebaseio.com",
+            projectId: "pets-control-d5e55",
+            storageBucket: "pets-control-d5e55.appspot.com",
+            messagingSenderId: "295982271654",
+            appId: "1:295982271654:web:a8cc495027ee37f3d5f867"
+        };
+        firebase.initializeApp(firebaseConfig);
+    </script>
 
     <script src="./assets/js/jquery-1.12.4.js"></script>
     <script src="./assets/js/owl-carousel.js"></script>
