--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -171,7 +171,6 @@
 										</tr>
 									</thead>
 									<tbody id="tblCargo">
-										<!-- Agregar filas desde JS -->
 									</tbody>
 								</table>
 							</div>
@@ -233,5 +232,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 	<script src="./data-table.js"></script>
 	<script src="./main.js"></script>
+	<script src="./main_cargo.js"></script>
 </body>
 </html>
