--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -145,7 +145,7 @@
 					<div class="col-12">
 						<div class="card shadow mt-3 bg-dark">
 							<div class="card-body">
-								<form class="row">
+								<form class="row" id="frmcargo">
 									<div class="form-group col-md-4 p-1">
 										<input type="text" class="form-control" placeholder="Ingresar Cargo" id="txtNombreCargo">
 									</div>
@@ -184,13 +184,12 @@
 					<div class="col-12">
 						<div class="card shadow mt-3 bg-dark">
 							<div class="card-body">
-								<form class="row">
+								<form class="row" id="frmRaza">
 									<div class="form-group col-md-6 p-1">
 										<input type="text" class="form-control" placeholder="Ingresar Raza" id="txtNombreRaza">
 									</div>
 									<div class="form-group col-md-6 p-1">
 										<select class="form-select" id="cboEspecie">
-											<option value="0">Seleccione</option>
 										</select>
 									</div>
 									<div class="form-group col-md-6 p-1">
